[dyad] Fixed TypeScript import error in middleware - wrote 3 file(s), added @supabase/ssr package(s)

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.87.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
